codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__session_end_hook_activity.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: "format!(\"before reveal:\\n{hidden}\\nrunning:\\n{running}\\ncompleted:\\n{}\",\nhook_status_frame(&chat, 80),)"
---
before reveal:
"                                                                                "
" Elpis · model gpt-5.6-sol default · location /tmp/project                      "
"┌──────────────────────────────────────────────┐│CONTEXT LEDGER  context not    "
"› Ask Elpis to do anything                     ││measured · ≈0 source estimates "
"└──────────────────────────────────────────────┘│Tab controls · Alt+C hide ·    "
"        100% context left · Tab Context Ledger  │Ctrl+click open file           "
"                                                │                               "
"                                                │SMART PRUNE          [···] SYNC"
"                                                │Reading current thread state   "
"                                                │Syncing… · /smart-prune on|off "
"                                                │sets an explicit state         "
"                                                │                               "
"                                                │SUBAGENTS             [━━━●] ON"
"                                                │May delegate to other agents   "
"                                                │                               "
"                                                │CONTEXT WINDOW  usage          "
"                                                │unavailable                    "
"                                                │Context measurement unavailable"
"                                                │until the first request        "
"                                                │snapshot                       "
"                                                │                               "
"                                                │No portable context is         "
"                                                │available.                     "
running:
"                                                                                "
" Elpis · model gpt-5.6-sol default · location /tmp/project                      "
"• Saving session summary                        │CONTEXT LEDGER  context not    "
"                                                │measured · ≈0 source estimates "
"┌──────────────────────────────────────────────┐│Tab controls · Alt+C hide ·    "
"› Ask Elpis to do anything                     ││Ctrl+click open file           "
"└──────────────────────────────────────────────┘│                               "
"  tab  open the Context Ledger and choose what …│SMART PRUNE          [···] SYNC"
"                                                │Reading current thread state   "
"                                                │Syncing… · /smart-prune on|off "
"                                                │sets an explicit state         "
"                                                │                               "
"                                                │SUBAGENTS             [━━━●] ON"
"                                                │May delegate to other agents   "
"                                                │                               "
"                                                │CONTEXT WINDOW  usage          "
"                                                │unavailable                    "
"                                                │Context measurement unavailable"
"                                                │until the first request        "
"                                                │snapshot                       "
"                                                │                               "
"                                                │No portable context is         "
"                                                │available.                     "
completed:
"                                                                                "
" Elpis · model gpt-5.6-sol default · location /tmp/project                      "
"┌──────────────────────────────────────────────┐│CONTEXT LEDGER  context not    "
"› Ask Elpis to do anything                     ││measured · ≈0 source estimates "
"└──────────────────────────────────────────────┘│Tab controls · Alt+C hide ·    "
"  tab  open the Context Ledger and choose what …│Ctrl+click open file           "
"                                                │                               "
"                                                │SMART PRUNE          [···] SYNC"
"                                                │Reading current thread state   "
"                                                │Syncing… · /smart-prune on|off "
"                                                │sets an explicit state         "
"                                                │                               "
"                                                │SUBAGENTS             [━━━●] ON"
"                                                │May delegate to other agents   "
"                                                │                               "
"                                                │CONTEXT WINDOW  usage          "
"                                                │unavailable                    "
"                                                │Context measurement unavailable"
"                                                │until the first request        "
"                                                │snapshot                       "
"                                                │                               "
"                                                │No portable context is         "
"                                                │available.                     "
