codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__session_end_hook_activity_without_message.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
assertion_line: 4649
expression: "format!(\"before reveal:\\n{hidden}\\nrunning:\\n{running}\\ncompleted:\\n{}\",\nhook_status_frame(&chat, 80),)"
---
before reveal:
"                                                                                "
" Elpis · model gpt-5.6-sol default · location /tmp/project                      "
"────────────────────────────────────────────────┐ CONTEXT LEDGER  context not   "
"› Ask Elpis to do anything                      │ measured · ≈0 source          "
"────────────────────────────────────────────────┤ estimates                     "
"        100% context left · Tab Context Ledger  │ Tab controls · Alt+C hide ·   "
"                                                │ Ctrl+click open file          "
"                                                │                               "
"                                                │ SMART PRUNE       [···] SYNC  "
"                                                │ Reading current thread state  "
"                                                │ Syncing… · /smart-prune on|   "
"                                                │ off sets an explicit state    "
"                                                │                               "
"                                                │ SUBAGENTS          [━━━●] ON  "
"                                                │ May delegate to other agents  "
"                                                │                               "
"                                                │ CONTEXT WINDOW  usage         "
"                                                │ unavailable                   "
"                                                │ Context measurement           "
"                                                │ unavailable until the first   "
"                                                │ request snapshot              "
"                                                │                               "
"                                                │ No portable context is        "
"                                                │ available.                    "
running:
"                                                                                "
" Elpis · model gpt-5.6-sol default · location /tmp/project                      "
"• Running hook                                  │ CONTEXT LEDGER  context not   "
"                                                │ measured · ≈0 source          "
"────────────────────────────────────────────────┤ estimates                     "
"› Ask Elpis to do anything                      │ Tab controls · Alt+C hide ·   "
"────────────────────────────────────────────────┤ Ctrl+click open file          "
"  tab  open the Context Ledger and choose what …│                               "
"                                                │ SMART PRUNE       [···] SYNC  "
"                                                │ Reading current thread state  "
"                                                │ Syncing… · /smart-prune on|   "
"                                                │ off sets an explicit state    "
"                                                │                               "
"                                                │ SUBAGENTS          [━━━●] ON  "
"                                                │ May delegate to other agents  "
"                                                │                               "
"                                                │ CONTEXT WINDOW  usage         "
"                                                │ unavailable                   "
"                                                │ Context measurement           "
"                                                │ unavailable until the first   "
"                                                │ request snapshot              "
"                                                │                               "
"                                                │ No portable context is        "
"                                                │ available.                    "
completed:
"                                                                                "
" Elpis · model gpt-5.6-sol default · location /tmp/project                      "
"────────────────────────────────────────────────┐ CONTEXT LEDGER  context not   "
"› Ask Elpis to do anything                      │ measured · ≈0 source          "
"────────────────────────────────────────────────┤ estimates                     "
"  tab  open the Context Ledger and choose what …│ Tab controls · Alt+C hide ·   "
"                                                │ Ctrl+click open file          "
"                                                │                               "
"                                                │ SMART PRUNE       [···] SYNC  "
"                                                │ Reading current thread state  "
"                                                │ Syncing… · /smart-prune on|   "
"                                                │ off sets an explicit state    "
"                                                │                               "
"                                                │ SUBAGENTS          [━━━●] ON  "
"                                                │ May delegate to other agents  "
"                                                │                               "
"                                                │ CONTEXT WINDOW  usage         "
"                                                │ unavailable                   "
"                                                │ Context measurement           "
"                                                │ unavailable until the first   "
"                                                │ request snapshot              "
"                                                │                               "
"                                                │ No portable context is        "
"                                                │ available.                    "
