codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__side_context_label_preserves_status_line.snap
---
source: tui/src/chatwidget/tests/side.rs
expression: terminal.backend()
---
"                                                                                "
" Elpis · model gpt-5.6-sol · location /tmp/proje                                "
"│                                               │CONTEXT LEDGER  context not    "
"› Check recently modified functions for compati │measured · ≈0 source estimates "
"│                                               │Tab hide/show · Ctrl+click open"
"│                                               │file                           "
"│                                               │                               "
"      Side from main thread · Ctrl+C to return  │SMART PRUNE          [···] SYNC"
"                                                │Reading current thread state   "
"                                                │Syncing… · /smart-prune on|off "
"                                                │sets an explicit state         "
"                                                │                               "
"                                                │CONTEXT WINDOW  usage          "
"                                                │unavailable                    "
"                                                │Context measurement unavailable"
"                                                │until the first request        "
"                                                │snapshot                       "
"                                                │                               "
"                                                │No portable context is         "
"                                                │available.                     "
