codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__single_line_final_answer_hides_working_status.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
assertion_line: 2165
expression: normalize_snapshot_paths(terminal.backend().vt100().screen().contents())
---
› count to 1


• 1

 Elpis · model gpt-5 default · location 
│
› Ask Elpis to do anything
│
  100% context left · Tab Context Ledger
