codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__skills_menu_default_mentions_shortcut.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
assertion_line: 3603
expression: popup
---
 Elpis · model gpt-5.6-sol · location /tmp/project

  Skills
  Choose an action


› 1. List skills            Tip: press $ to open this list directly
  2. Enable/Disable Skills  Enable or disable skills

  enter select · esc back
